fix: remove double border in dependencies input

--- a/styles/global.css
+++ b/styles/global.css
@@ -67,10 +67,14 @@ ul {
     margin: auto 1rem; 
 }
 
-.data-box input, .data-box .section-input {
+.data-box .section-input {
     grid-column: 2/5;
     grid-row: 1;
-    border-radius: 0;
+}
+
+.data-box input {
+    grid-column: 2/5;
+    grid-row: 1;
     border: none;
     border-bottom: solid 1px #f1efee;
     font-size: calc(0.35em + 0.35vw);
